--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -26,7 +26,7 @@
 		          Logged in as <a href="#" class="navbar-link">Test User</a>
 		        </p>
 		        <ul class="nav">
-		          <li class="active"><a href="#"><i class="icon-home"></i> Home</a></li>
+		          <li class="active"><a href="/"><i class="icon-home"></i> Home</a></li>
 		          <li><a href="#about">About</a></li>
 		        </ul>
 		      </div>
